fix first page problem

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </head>
   <body class="main-content">
     <canvas id="canvas"></canvas>
-    <header class="section sec1 header" id="home">
+    <header class="section sec1 header active " id="home">
       <div class="header-content">
         <div class="left-header">
           <div class="h-shape"></div>
@@ -384,7 +384,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec5 contact active" id="contact">
+      <section class="section sec5 contact " id="contact">
         <div class="contact-container">
           <div class="main-title">
             <h2>
