--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="portss">
           <div class="port-item">
             <div class="image">
-              <img src="/img/port1.jpg" alt="" />
+              <img src="img/port1.jpg" alt="" />
             </div>
             <div class="hover-item">
               <h3>project source code</h3>
@@ -275,7 +275,7 @@
           </div>
           <div class="port-item">
             <div class="image">
-              <img src="/img/port1.jpg" alt="" />
+              <img src="img/port1.jpg" alt="" />
             </div>
             <div class="hover-item">
               <h3>project source code</h3>
@@ -294,7 +294,7 @@
           </div>
           <div class="port-item">
             <div class="image">
-              <img src="/img/port1.jpg" alt="" />
+              <img src="img/port1.jpg" alt="" />
             </div>
             <div class="hover-item">
               <h3>project source code</h3>
@@ -322,7 +322,7 @@
           </div>
           <div class="blogs">
             <div class="blog">
-              <img src="/img/blog1.jpg" alt="" />
+              <img src="img/blog1.jpg" alt="" />
               <div class="blog-text">
                 <h4>how to create your own website</h4>
                 <p>
@@ -332,7 +332,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="/img/blog1.jpg" alt="" />
+              <img src="img/blog1.jpg" alt="" />
               <div class="blog-text">
                 <h4>how to create your own website</h4>
                 <p>
@@ -342,7 +342,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="/img/blog1.jpg" alt="" />
+              <img src="img/blog1.jpg" alt="" />
               <div class="blog-text">
                 <h4>how to create your own website</h4>
                 <p>
@@ -352,7 +352,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="/img/blog1.jpg" alt="" />
+              <img src="img/blog1.jpg" alt="" />
               <div class="blog-text">
                 <h4>how to create your own website</h4>
                 <p>
@@ -362,7 +362,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="/img/blog1.jpg" alt="" />
+              <img src="img/blog1.jpg" alt="" />
               <div class="blog-text">
                 <h4>how to create your own website</h4>
                 <p>
@@ -372,7 +372,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="/img/blog1.jpg" alt="" />
+              <img src="img/blog1.jpg" alt="" />
               <div class="blog-text">
                 <h4>how to create your own website</h4>
                 <p>
