--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         margin-left: 5rem;
         -webkit-animation: morph 8s ease-in-out infinite;
         animation: morph 8s ease-in-out infinite;
-        background-image: url(/img/photo.png);
+        background-image: url(/img/photo.jpeg);
         background-position: 50%;
         background-repeat: no-repeat;
         background-size: cover;
